k8s/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: demo-mtls
  namespace: demo
spec:
  mtls:
    mode: STRICT
