k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-vs
  namespace: demo
spec:
  hosts:
    - "*"
  gateways:
    - demo-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: demo-app
            subset: v2
            port:
              number: 80
          weight: 10
        - destination:
            host: demo-app
            subset: v1
            port:
              number: 80
          weight: 90
